--- a/Task #2/NewspaperSellerSimulation/NewspaperSellerSimulation/NewspaperSellerSimulation.csproj
+++ b/Task #2/NewspaperSellerSimulation/NewspaperSellerSimulation/NewspaperSellerSimulation.csproj
@@ -36,7 +36,7 @@
   <ItemGroup>
     <Reference Include="NewspaperSellerTesting, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\DLL .net 4\NewspaperSellerTesting.dll</HintPath>
+      <HintPath>E:\7th\New 7th\Modeling &amp; Simulation\Lab\Labs\Lab 3_Task 2\NewspaperSellerSimulation_Students\NewspaperSellerSimulation\bin\Debug\NewspaperSellerTesting.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
